--- a/scss/components/_actor-sheet.scss
+++ b/scss/components/_actor-sheet.scss
@@ -185,6 +185,7 @@
 .actor-sheet table {
     border-top: 0;
     margin-top: 0;
+    overflow: visible;
 }
 
 .actor-sheet th.left,
